# ph351-Computational_Physics_UOC

./: .gitignore  LICENSE  README.md
mock_exam/code/cpp/: CMakeLists.txt
mock_exam/code/cpp/src/: mock_exam_1.cpp  mock_exam_1.h  mock_exam_2.cpp  mock_exam_2.h
mock_exam/code/python/: plot_1.py
project_1_pde/: README.md  README.txt
project_1_pde/code/cpp/: CMakeLists.txt
project_1_pde/code/cpp/src/: pde_1d.cpp  pde_2d.cpp
project_1_pde/code/python/: plot.py
project_1_pde/report/: README.md  report.fdb_latexmk  report.fls  report.md  report.tex
project_2_ed/code/cpp/: CMakeLists.txt
project_2_ed/code/cpp/src/: ed.cpp  ed.hpp  eispack.cpp  hamiltonian.cpp  quantum.hpp
project_2_ed/code/cpp/src/Eigen/: SVD
project_2_ed/code/python/: plot.py
project_2_ed/report/: README.md
project_3_md/: CMakeLists.txt
project_3_md/code/cpp/: CMakeLists.txt
project_3_md/code/cpp/src/: md.cpp  md.h
project_3_md/code/python/: plot.py
project_3_md/report/: README.md
project_4_mc/code/cpp/: CMakeLists.txt
project_4_mc/code/cpp/src/: main.cpp  mc.cpp  mc.h
project_4_mc/code/python/: plot.py
project_4_mc/report/: README.md
universal_code/cpp/: FuncTools.cpp  FuncTools.h
universal_code/cpp/src/: FuncTools.h  FuncTools.hpp
universal_code/src/python/: saveFig.py
